Update AuthenticationService.java