@@ -4,12 +4,16 @@ import com.codefusion.wasbackend.Account.dto.AccountEntityDto;
 import com.codefusion.wasbackend.Account.model.AccountEntity;
 import com.codefusion.wasbackend.Account.repository.AccountRepository;
 import com.codefusion.wasbackend.config.security.JwtUtil;
+import com.codefusion.wasbackend.store.model.StoreEntity;
+import com.codefusion.wasbackend.user.model.UserEntity;
+import com.codefusion.wasbackend.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 
@@ -17,6 +21,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AuthenticationService {
     private final AccountRepository accountRepository;
+    private final UserRepository userRepository;
     private final BCryptPasswordEncoder passwordEncoder;
     private final JwtUtil jwtUtil;
 
@@ -45,8 +50,15 @@ public class AuthenticationService {
 
         Long storeId = null;
         if (roles.contains("MANAGER") || roles.contains("EMPLOYEE")) {
-            assert account.getUser() != null;
-            storeId = account.getUser().getStores().getFirst().getId();
+            Optional<UserEntity> userOpt = userRepository.findById(userId);
+            if(userOpt.isPresent()){
+                UserEntity user = userOpt.get();
+                List<StoreEntity> stores = user.getStores();
+
+                if(stores != null && !stores.isEmpty()){
+                    storeId = stores.get(0).getId();
+                }
+            }
         }
         return jwtUtil.generateToken(entity.getUsername(), roles, userId, storeId);
     }
